# ml_frameworks_examples

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dev.md  README.md  build-examples.sh
examples/CIFAR10-Image-Recognition-CNN/libtorch/experimental/: CMakeLists.txt  Dockerfile  LoadCIFAR-10.hpp  main.cpp
examples/CIFAR10-Image-Recognition-CNN/pytorch/base/: README.md  main.py
examples/CIFAR10-Image-Recognition-CNN/pytorch/experimental/: Dockerfile  README.md  using-CIFAR-10.py  using-pretrained-resnet.py  using-simple-CNN.py
examples/CIFAR10-Image-Recognition-CNN/tiny-dnn/experimental/: CMakeLists.txt  Dockerfile  main.cpp  prepare_cifar10.py  readme.md  run.sh
examples/Tabular-Regression–-House-Price-Prediction-with-an-MLP/PyTorch/experimental/: test_usecase1_basic.py
examples/Tabular-Regression–-House-Price-Prediction-with-an-MLP/libtorch/experimental/: CMakeLists.txt  HighFive.hpp  dataset.py  main.cpp
examples/Tabular-Regression–MLP/libtorch/: README.md
examples/Tabular-Regression–MLP/libtorch/experimental/: CMakeLists.txt  Dockerfile  dataset.py  main.cpp
examples/Tabular-Regression–MLP/pytorch/base/: README.md  main.py
examples/Tabular-Regression–MLP/pytorch/experimental/: Dockerfile  README.md  main.py  requirements.txt  using-MLP.py  using_ignite.py  using_lightning.py
examples/Tabular-Regression–MLP/pytorch/experimental/lightning_logs/version_0/: metrics.csv
examples/Tabular-Regression–MLP/pytorch/experimental/lightning_logs/version_0/checkpoints/: epoch=99-step=3000.ckpt
examples/Tabular-Regression–MLP/tiny-dnn/experimental/: CMakeLists.txt  Dockerfile  main.cpp  preprocess.py  readme.md
examples/Titanic-Survival-Prediction-XGBoost/libtorch/experimental/: CMakeLists.txt  CSVLoader.hpp  Dockerfile  dataset.py  main.cpp
examples/Titanic-Survival-Prediction-XGBoost/pytorch/base/: README.md  main.py
examples/Titanic-Survival-Prediction-XGBoost/pytorch/experimental/: Dockerfile  README.md  main.py  using-DMatrix-API.py  using-sklearn.py  using-xgboost-pytorch-data-pipeline.py
examples/gpt2-skeleton/libtorch/: CMakeLists.txt  README.md  gpt2.cc  gpt2.h  main.cpp
examples/imagenet-resnet50/libtorch/: CMakeLists.txt  README.md  main.cc
examples/mnist-solver/libtorch/: CMakeLists.txt  README.md  main.cc
scripts/: build-examples-all.sh
